Overflow in x-direction resolved

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
   line-height: 21px;
   font-size: 13px;
   color: #6a737b;
+  overflow-x: hidden;
 }
 
 ol,
